# hashlab-challenge

./: README.md  docker-compose.yml
discount/: .env.example  Cargo.toml  Dockerfile  README.md  build.rs
discount/scripts/: build.sh  lint.sh  run.sh  setup.sh  test.sh
discount/src/: grpc.rs  lib.rs  main.rs  math.rs  service.rs
discount/src/ports/: grpc.rs  mod.rs  tonic.rs
discount/src/ports/grpc/: server.rs
discount/src/rules/: black_friday.rs  mod.rs  user_birthday.rs
discount/src/services/: discount.rs  health_check.rs  mod.rs
js-commons/: Dockerfile  README.md  package-lock.json  package.json
js-commons/scripts/: build.sh  lint.sh  test.sh
js-commons/src/config/: sequelize.js
js-commons/src/errors/: database.js  index.js
js-commons/src/logger/: index.js
js-commons/src/logic/: cuid.js
js-commons/tests/logic/: cuid.test.js
product/: .env.example  .eslintrc.js  Dockerfile  README.md  package-lock.json  package.json
product/scripts/: build.sh  lint.sh  migrate-down.sh  migrate-up.sh  run.sh  seed-destroy.sh  seed-generate.sh  setup.sh  test.sh
product/src/app/: index.js
product/src/controllers/: index.js  product.js
product/src/logic/: discount.js
proto/: discount.proto  health_check.proto  user.proto
scripts/: build.sh  lint.sh  migrate-down.sh  migrate-up.sh  run.sh  seed-destroy.sh  seed-generate.sh  setup.sh  test.sh
user/: .env.example  Dockerfile  README.md  package-lock.json  package.json
user/scripts/: build.sh  lint.sh  migrate-down.sh  migrate-up.sh  run.sh  seed-destroy.sh  seed-generate.sh  setup.sh  test.sh
(+46 files in other folders)
