[package]
name = "discount"
version = "0.1.0"
authors = ["Otavio Pace <otaviopp8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4"

[dev-dependencies]
faketime = "0.2"

[build-dependencies]
tonic-build = "0.4"
