[package]
name = "discount"
version = "0.1.0"
authors = ["Otavio Pace <otaviopp8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4.0"
prost = "0.7.0"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.19"
async-trait = "0.1.42"
futures = "0.3.13"

[dev-dependencies]
tokio-test = "0.4.0"

[build-dependencies]
tonic-build = "0.4.0"
